change user id from uuid to string
